test_suite5/ALAN/test_suite/alan-2022-examples/failing/006300_mutation.alan
source p begin leave 3 call Y() < 3152500 end
